modules/services/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
  namespace: rideshare-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 221693237976.dkr.ecr.us-east-2.amazonaws.com/jibike_rideshare_rider_service:rideshare-frontend-v0.10
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
